--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,69 +1,62 @@
-<h2>Sign up</h2>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
-  
-  <div class="field">
-    <%= f.label :username %><br />
-    <%= f.text_field :username, autofocus: true %>
+<div class="content">
+  <div class="header row background-overlay">
+    <div class="text-content container-fluid">
+      <img class="header-logo" alt="REUNION" src="/assets/logo.png">
+      <h1>FIND YOUR FRIENDS ALL OVER THE WORLD</h1>
+    </div>
   </div>
 
-  <div class="field">
-    <%= f.label :firstname %><br />
-    <%= f.text_field :firstname, autofocus: true %>
+  <div class="row text-center section">
+    <div class="col-md-10 col-md-offset-1">
+    <div class="col-md-4"> 
+      <h1>Example</h1>
+      <p>Emaple paragrap h</p>
+    </div>
+    <div class="col-md-4"></div>
+    <div class="col-md-4"></div>
+    </div>
   </div>
 
-  <div class="field">
-    <%= f.label :lastname %><br />
-    <%= f.text_field :lastname, autofocus: true %>
+  <div class="row">
+    <div class="col-md-6">
+  <div class="container-fluid registration-section">
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      <%= devise_error_messages! %>
+      <div class="form-group row">
+        <div class="col-sm-6">
+          <div class="input_field">
+            <%= f.text_field :username, placeholder: "USERNAME", autofocus: true, :class => 'form-control' %>
+          </div>
+          <div class="input_field">
+            <%= f.text_field :firstname, placeholder: "FIRST NAME", :class => 'form-control' %>
+          </div>
+          <div class="input_field">
+            <%= f.text_field :lastname, placeholder: "LAST NAME", :class => 'form-control' %>
+          </div>
+        </div>
+        <div class="col-sm-6">
+          <div class="input_field">
+            <%= f.email_field :email, placeholder: "EMAIL", :class => 'form-control' %>
+          </div>
+          <div class="input_field">
+            <%= f.password_field :password, placeholder: "PASSWORD", autocomplete: "off", :class => 'form-control' %>
+          </div>
+          <div class="input_field">
+            <%= f.password_field :password_confirmation, placeholder: "CONFIRM PASSWORD", autocomplete: "off", :class => 'form-control' %>
+          </div>
+        </div>
+        <div class="row actions">
+          <%= f.submit "Register", :class => 'form-control-submit' %>
+        </div>
+      <% end %>
+      </div>
+  </div>
+      
+    </div>
+    <div class="col-md-6">
+      
+      <h2>hello</h2>
+    </div>
   </div>
 
-  <div class="field">
-    <%= f.label :address_1 %><br />
-    <%= f.text_field :address_1, autofocus: true %>
-  </div>
-
-  <div class="field">
-    <%= f.label :address_2 %><br />
-    <%= f.text_field :address_2, autofocus: true %>
-  </div>
-
-  <div class="field">
-    <%= f.label :city %><br />
-    <%= f.text_field :city, autofocus: true %>
-  </div>
-
-  <div class="field">
-    <%= f.label :state %><br />
-    <%= f.text_field :state, autofocus: true %>
-  </div>
-
-  <div class="field">
-    <%= f.label :country %><br />
-    <%= f.text_field :country, autofocus: true %>
-  </div>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
