--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,6 +13,11 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
+
+body {
+  padding-top: 70px;
+}
+
 .navbar {
 	position: fixed;
 	top: 0px;
@@ -36,7 +41,7 @@
   height: 100%;
   min-height: 700px;
   position: relative;
-  background-image: linear-gradient(rgba(252, 223, 62, 0.9), rgba(252, 223, 62, 0.9)),  url("/assets/cheers.jpg");
+  background-image: linear-gradient(rgba(252, 223, 62, 0.7), rgba(252, 223, 62, 0.7)),  url("/assets/cheers.jpg");
   //background-image: linear-gradient(rgba(252, 223, 62, 0.6), rgba(0, 0, 0, 0.6)),  url("/assets/cheers.jpg");
   background-position: center;
   background-repeat: no-repeat;
@@ -102,7 +107,7 @@
 }
 
 .from-to-date-row {
-  padding-top: 70px;
+  // padding-top: 70px;
 }
 
 .form-control {
@@ -110,6 +115,6 @@
 }
 
 #map {
-  height: 450px;
+  height: 70vh;
   width: 100%;
 }
