--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -8,54 +8,57 @@
 
   <div class="row text-center section">
     <div class="col-md-10 col-md-offset-1">
-    <div class="col-md-4"> 
-      <h1>Example</h1>
-      <p>Emaple paragrap h</p>
-    </div>
-    <div class="col-md-4"></div>
-    <div class="col-md-4"></div>
+      <div class="col-md-4"> 
+        <h1>ADD FRIENDS</h1>
+        <p>Emaple paragrap h</p>
+      </div>
+      <div class="col-md-4">
+        <h1></h1>
+        <p>Emaple paragrap h</p>
+      </div>
+
+      <div class="col-md-4">
+        <span class="glyphicon glyphicon-star"></span>
+        <h1>Example</h1>
+        <p>Emaple paragrap h</p>
+      </div>
     </div>
   </div>
 
-  <div class="row">
-    <div class="col-md-6">
-  <div class="container-fluid registration-section">
-    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-      <%= devise_error_messages! %>
-      <div class="form-group row">
-        <div class="col-sm-6">
-          <div class="input_field">
-            <%= f.text_field :username, placeholder: "USERNAME", autofocus: true, :class => 'form-control' %>
+  <div class="row text-center">
+    <div class="col-md-8 col-md-offset-2">
+      <div class="container-fluid registration-section">
+        <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+          <%= devise_error_messages! %>
+          <div class="form-group row">
+            <div class="col-sm-6">
+              <div class="input_field">
+                <%= f.text_field :username, placeholder: "USERNAME", autofocus: true, :class => 'form-control' %>
+              </div>
+              <div class="input_field">
+                <%= f.text_field :firstname, placeholder: "FIRST NAME", :class => 'form-control' %>
+              </div>
+              <div class="input_field">
+                <%= f.text_field :lastname, placeholder: "LAST NAME", :class => 'form-control' %>
+              </div>
+            </div>
+            <div class="col-sm-6">
+              <div class="input_field">
+                <%= f.email_field :email, placeholder: "EMAIL", :class => 'form-control' %>
+              </div>
+              <div class="input_field">
+                <%= f.password_field :password, placeholder: "PASSWORD", autocomplete: "off", :class => 'form-control' %>
+              </div>
+              <div class="input_field">
+                <%= f.password_field :password_confirmation, placeholder: "CONFIRM PASSWORD", autocomplete: "off", :class => 'form-control' %>
+              </div>
+            </div>
+            <div class="row actions">
+              <%= f.submit "Register", :class => 'form-control-submit' %>
+            </div>
+          <% end %>
           </div>
-          <div class="input_field">
-            <%= f.text_field :firstname, placeholder: "FIRST NAME", :class => 'form-control' %>
-          </div>
-          <div class="input_field">
-            <%= f.text_field :lastname, placeholder: "LAST NAME", :class => 'form-control' %>
-          </div>
-        </div>
-        <div class="col-sm-6">
-          <div class="input_field">
-            <%= f.email_field :email, placeholder: "EMAIL", :class => 'form-control' %>
-          </div>
-          <div class="input_field">
-            <%= f.password_field :password, placeholder: "PASSWORD", autocomplete: "off", :class => 'form-control' %>
-          </div>
-          <div class="input_field">
-            <%= f.password_field :password_confirmation, placeholder: "CONFIRM PASSWORD", autocomplete: "off", :class => 'form-control' %>
-          </div>
-        </div>
-        <div class="row actions">
-          <%= f.submit "Register", :class => 'form-control-submit' %>
-        </div>
-      <% end %>
-      </div>
-  </div>
-      
-    </div>
-    <div class="col-md-6">
-      
-      <h2>hello</h2>
+      </div>     
     </div>
   </div>
 
